# TRL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Documentation/: TRL_Ref.md  TRL_Shader_Language.md  gles_sl_3.1_grammer.y  native_api_support.md  tem.txt  trlsl.y  trlsl_examples.trlsl  trlsl_full_example.hlsl  trlsl_full_example.trlsl  trlsl_grammer.txt  trlsl_parser.y  trlsl_tokener_sorted.txt
Example/: CMakeLists.txt
Example/TRLSL_Example/: CMakeLists.txt  Main.cpp
Example/Texture/: CMakeLists.txt  Main.cpp
Example/Triangle/: CMakeLists.txt  Main.cpp  Triangle.cpp
Include/TRL/: AdapterDesc.h  AttributeData.h  AttributeUniformInfo.h  AttributeVariable.h  CommonType.h  DataClasses.h  GpuBuffer.h  GpuObjectHandles.h  GpuProgram.h  GpuShader.h  GpuTexture.h  GpuTexture2D.h  RenderAPI.h  TRLCommonType.h  TRLShader.h  UniformVariable.h
Include/TRL/TRLSL/: DebugGenerator.h  GLSLGenerator.h  TRLSLGenerator.h  TRLSLParser.h  TRLSLTokener.h  Token.h  Tokener.h
Include/TRL/details/: DX11CommonType.h  GLCommonType.h
Include/TRL/details/DX11/: DX11RenderAPI.h  DX11Shader.h
Include/TRL/details/OpenGL/: OpenGLAttributeData.h  OpenGLBuffer.h  OpenGLCommonType.h  OpenGLProgram.h  OpenGLRenderAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLTexture2D.h
Include/TRL/details/RenderAPIImpl/DX11/: DX11AttributeData.h  DX11Buffer.h  DX11CommonType.h  DX11Program.h  DX11RenderAPI.h  DX11Shader.h  DX11Texture.h  DX11Texture2D.h
Include/TRL/details/RenderAPIImpl/OpenGL/: OpenGLAttributeData.h  OpenGLBuffer.h  OpenGLCommonType.h  OpenGLProgram.h  OpenGLRenderAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLTexture2D.h
Include/TRL/details/TRLSL/: DebugGenerator.h  GLSLGenerator.h  HLSLGenerator.h  TRLSLCodeGenerator.h  TRLSLGenerator.h  TRLSLGrammarRuleHandler.h  TRLSLParser.h  TRLSLTokener.h  TRLSL_IR.h  TRLSL_IRGenerator.h  Token.h  trlsl_token_id.h
Include/TRL/details/TRLSL/GLSL/: GLSLCodeGenerator.h
Include/TRL/details/TRLSL/_old/: GLSLGenerator.h  HLSLGenerator.h  TRLSLGenerator.h
Include/TRL/details/VGI/: Adapter.h  Monitor.h  VGI.h  Window.h
Include/TRL/details/VGI/WinDX/: WinDXAdapter.h  WinDXCommon.h  WinDXMonitor.h  WinDXVGI.h  WinDXWindow.h
Script/: install.bat
Source/: CMakeLists.txt  CMakeSources.cmake  TRLConfig.h.in  test.cpp
Source/OpenGL/: AttributeData.cpp  AttributeVariable.cpp  GpuBuffer.cpp  GpuProgram.cpp  GpuShader.cpp  RenderAPI.cpp  UniformVariable.cpp
Source/TRL/: DataClasses.cpp  GpuObjectHandles.cpp  RenderAPI.cpp  TRLShader.cpp
Source/TRL/DX11/: AttributeData.cpp  DX11RenderAPI.cpp  GpuBuffer.cpp  GpuProgram.cpp  GpuShader.cpp  GpuTexture.cpp  GpuTexture2D.cpp  RenderAPI.cpp
Source/TRL/OpenGL/: AttributeData.cpp  AttributeVariable.cpp  GpuBuffer.cpp  GpuProgram.cpp  GpuTexture.cpp  GpuTexture2D.cpp  OpenGLRenderAPI.cpp  RenderAPI.cpp  UniformVariable.cpp
Source/TRL/RenderAPIImpl/DX11/: DX11RenderAPI.cpp
Source/TRL/RenderAPIImpl/OpenGL/: OpenGLRenderAPI.cpp
Source/TRL/TRLSL/: DebugGenerator.cpp  GLSLGenerator.cpp  HLSLGenerator.cpp  TRLSLGenerator.cpp  TRLSLParser.cpp  TRLSLTokener.cpp  TRLSL_IR.cpp  TRLSL_IRGenerator.cpp  Token.cpp  Tokener.cpp  trlsl_parser.cpp  trlsl_parser_with_#line.cpp
Source/TRL/TRLSL/GLSL/: GLSLCodeGenerator.cpp
Source/TRL/TRLSL/_old/: DebugGenerator.cpp  HLSLGenerator.cpp
Source/TRL/VGI/WinDX/: WinDXAdapter.cpp  WinDXMonitor.cpp  WinDXVGI.cpp  WinDXWindow.cpp
Test/TRLSL_Examples/: simple.trlsl  simple_fs.glsl  simple_vs.glsl
