# 
# ToyRenderLayer(TRL)
# 

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(TRL)

SET(TRL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/Include)
SET(TRL_SOURCE_DIR ${PROJECT_SOURCE_DIR}/Source)

MESSAGE(STATUS "${PROJECT_NAME} CMake Begin...")

ADD_SUBDIRECTORY(Source)
ADD_SUBDIRECTORY(Example)

MESSAGE(STATUS "${PROJECT_NAME} CMake End")