# 
# ToyRenderLayer(TRL)
# 

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

## template code
SET(TRL_LOADED FALSE CACHE PATH "-" FORCE)
SET(TOY_UTILITY_LOADED FALSE CACHE PATH "-" FORCE)
SET(TOY_XWINDOW_LOADED FALSE CACHE PATH "-" FORCE)


if(NOT TRL_LOADED)

    PROJECT(TRL)

    SET(TRL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/Include)
    SET(TRL_SOURCE_DIR ${PROJECT_SOURCE_DIR}/Source)

    MESSAGE(STATUS "${PROJECT_NAME} CMake Begin...")

    ADD_SUBDIRECTORY(Source)

	option(OPTION_TRL_Build_Examples "Build TRL examples" ON)
	if(OPTION_TRL_Build_Examples)
		ADD_SUBDIRECTORY(Example)
	endif()

    MESSAGE(STATUS "${PROJECT_NAME} CMake End")

    SET(TRL_LOADED TRUE CACHE PATH "TRL project loaded" FORCE)

endif()